# EPG_test_task

./: .gitignore  README.md  pyproject.toml
src/: .env  Dockerfile  alembic.ini  config.py  main.py  settings.py
src/api/: __init__.py  core_router.py  users_router.py
src/db/: __init__.py  db.py
src/migrations/: env.py
src/migrations/versions/: 1c12ebb93352_added_registration_date_for_user.py  321ea0f5b77a_added_latitude_and_longitutde_for_user.py  6b74a042ff12_added_matches.py  bbcee43df4b7_initial_migration.py  c01ae9548c2c_added_matches_update_for_user.py
src/models/: __init__.py  base.py  match.py  user.py
src/schemas/: __init__.py  match.py  user.py
src/services/: __init__.py  match_service.py  smtp_service.py  user_service.py
src/utils/: __init__.py  constants.py  enums.py  support.py
